desarrollo de mas funcionalidades y estilos

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <span>MS-123</span>
         </div>
         <div class="pantalla">
-            <div>
-                <p id="formula"></p><span id="blink">_</span>
+            <div id="formul">
+                <span id="Ans"></span><p id="formula"></p><span id="blink">_</span>
             </div>
             <div id="resultado">0</div>
         </div>
@@ -37,12 +37,12 @@
             <div class="tecla_7"><button name="numero">7</button></div>
             <div class="tecla_8"><button name="numero">8</button></div>
             <div class="tecla_9"><button name="numero">9</button></div>
-            <div class="punto"><button name="operador" data-valor=".">·</button></div>
+            <div class="punto"><button name="numero" data-valor=".">·</button></div>
             <div class="multiplicacion"><button name="operador">×</button></div>
             <div class="division"><button name="operador">÷</button></div>
             <div class="suma"><button name="operador">+</button></div>
             <div class="resta"><button name="operador" data-valor="-">−</button></div>
-            <div class="ans"><button>ANS</button></div>
+            <div class="ans"><button name="operador" id="agregar">ANS</button></div>
             <div class="tecla_c"><button id="eliminar">C</button></div>
             <div class="tecla_ac"><button id="reset">AC</button></div>
             <div class="igual"><button id="operar">=</button></div>  
