agregadas nuevas funcionalidades - errores corregidos

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/favicon.png" type="image/x-icon"> 
     <link rel="stylesheet" type="text/css" href="style.css">
     
-    <title>Calculadora - HTML/CSS/JAVASCRIPT</title>
+    <title>Calculadora Javascript</title>
 </head>
 <body>
     <div class="calculadora">
