--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="cerrar_parent"><button data-tipo="numero" data-valor=")">)</button></div>
             <div class="direccional">
                 <div class="flechas">
-                    <button class="navUp" data-flecha="up">⮝</button>
+                    <button class="navUp" data-flecha="up">&#11165;</button>
                     <button class="navDown" data-flecha="down">⮟</button>
                     <button class="navLeft" data-flecha="left">⮜</button>
                     <button class="navRight" data-flecha="right">⮞</button>
