cambio flechas unicode por errores en disp moviles

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             <div class="cerrar_parent"><button data-tipo="numero" data-valor=")">)</button></div>
             <div class="direccional">
                 <div class="flechas">
-                    <button class="navUp" data-flecha="up">&#11165;</button>
-                    <button class="navDown" data-flecha="down">⮟</button>
-                    <button class="navLeft" data-flecha="left">⮜</button>
-                    <button class="navRight" data-flecha="right">⮞</button>
+                    <button class="navUp" data-flecha="up">ä</button>
+                    <button class="navDown" data-flecha="down">ë</button>
+                    <button class="navLeft" data-flecha="left">û</button>
+                    <button class="navRight" data-flecha="right">ü</button>
                 </div>
             </div>
             <div class="tecla_0"><button data-tipo="numero" data-valor="0">0</button></div>
