--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preload" href="fonts/Ds-Digital.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="stylesheet" type="text/css" href="css/normalize.css" as="style"> 
     <link rel="stylesheet" type="text/css" href="css/style.css" as="style">
-    <script async src="js/script.js"></script>
+    <script defer src="js/script.js"></script>
     <title>Calculadora Javascript</title>
 </head>
 <body>
