--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
             <div class="igual"><button data-valor="operar">=</button></div>  
         </div>
     </div>
-    <div class="credito">Practicas Html/CSS/Javascript - Erik Medina</div>
-    
+    <!-- <div class="credito">Practicas Html/CSS/Javascript - Erik Medina</div> -->
 </body>
 </html>
