--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/favicon.png" type="image/x-icon">
-    <link rel="preload" href="fonts/Ds-Digital.ttf" as="font" type="font/ttf" crossorigin>
+    <!-- <link rel="preload" href="fonts/Ds-Digital.ttf" as="font" type="font/ttf" crossorigin> -->
     <link rel="stylesheet" type="text/css" href="css/normalize.css" as="style"> 
     <link rel="stylesheet" type="text/css" href="css/style.css" as="style">
+    <script defer src="https://cdn.jsdelivr.net/npm/mathjs@12.1.0/lib/browser/math.min.js"></script>
     <script defer src="js/script.js"></script>
     <title>Calculadora Javascript</title>
 </head>
@@ -37,10 +38,10 @@
         </div>
         <div class="divisor"></div>
         <div id="teclado" class="teclado">
-            <div class="tecla_off"><button data-valor="off">OFF</button></div>
-            <div class="tecla_on"><button data-valor="on">ON</button></div>
-            <div class="abrir_parent"><button data-tipo="numero" data-valor="(">(</button></div>
-            <div class="cerrar_parent"><button data-tipo="numero" data-valor=")">)</button></div>
+            <div class="tecla_off"><button class="button" data-valor="off">OFF</button></div>
+            <div class="tecla_on"><button class="button" data-valor="on">ON</button></div>
+            <div class="abrir_parent"><button class="button" data-tipo="argumento" data-valor="parentesisApertura">(</button></div>
+            <div class="cerrar_parent"><button class="button" data-tipo="argumento" data-valor="parentesisCierre">)</button></div>
             <div class="direccional">
                 <div class="flechas">
                     <button class="navUp" data-flecha="up">ä</button>
@@ -49,25 +50,25 @@
                     <button class="navRight" data-flecha="right">ü</button>
                 </div>
             </div>
-            <div class="tecla_0"><button data-tipo="numero" data-valor="0">0</button></div>
-            <div class="tecla_1"><button data-tipo="numero" data-valor="1">1</button></div>
-            <div class="tecla_2"><button data-tipo="numero" data-valor="2">2</button></div>
-            <div class="tecla_3"><button data-tipo="numero" data-valor="3">3</button></div>
-            <div class="tecla_4"><button data-tipo="numero" data-valor="4">4</button></div>
-            <div class="tecla_5"><button data-tipo="numero" data-valor="5">5</button></div>
-            <div class="tecla_6"><button data-tipo="numero" data-valor="6">6</button></div>
-            <div class="tecla_7"><button data-tipo="numero" data-valor="7">7</button></div>
-            <div class="tecla_8"><button data-tipo="numero" data-valor="8">8</button></div>
-            <div class="tecla_9"><button data-tipo="numero" data-valor="9">9</button></div>
-            <div class="punto"><button data-tipo="numero" data-valor=".">·</button></div>
-            <div class="multiplicacion"><button data-tipo="operador" data-valor="×">×</button></div>
-            <div class="division"><button data-tipo="operador" data-valor="÷">÷</button></div>
-            <div class="suma"><button data-tipo="operador" data-valor="+">+</button></div>
-            <div class="resta"><button data-tipo="operador" data-valor="-">−</button></div>
-            <div class="ans"><button data-tipo="operador" data-valor="Ans">ANS</button></div>
-            <div class="tecla_c"><button data-valor="eliminar">C</button></div>
-            <div class="tecla_ac"><button data-valor="reset">AC</button></div>
-            <div class="igual"><button data-valor="operar">=</button></div>  
+            <div class="tecla_0"><button class="button" data-tipo="argumento" data-valor="cero">0</button></div>
+            <div class="tecla_1"><button class="button" data-tipo="argumento" data-valor="uno">1</button></div>
+            <div class="tecla_2"><button class="button" data-tipo="argumento" data-valor="dos">2</button></div>
+            <div class="tecla_3"><button class="button" data-tipo="argumento" data-valor="tres">3</button></div>
+            <div class="tecla_4"><button class="button" data-tipo="argumento" data-valor="cuatro">4</button></div>
+            <div class="tecla_5"><button class="button" data-tipo="argumento" data-valor="cinco">5</button></div>
+            <div class="tecla_6"><button class="button" data-tipo="argumento" data-valor="seis">6</button></div>
+            <div class="tecla_7"><button class="button" data-tipo="argumento" data-valor="siete">7</button></div>
+            <div class="tecla_8"><button class="button" data-tipo="argumento" data-valor="ocho">8</button></div>
+            <div class="tecla_9"><button class="button" data-tipo="argumento" data-valor="nueve">9</button></div>
+            <div class="punto"><button class="button" data-tipo="argumento" data-valor="punto">·</button></div>
+            <div class="multiplicacion"><button class="button" data-tipo="operador" data-valor="multiplicacion">×</button></div>
+            <div class="division"><button class="button" data-tipo="operador" data-valor="division">÷</button></div>
+            <div class="suma"><button class="button" data-tipo="operador" data-valor="suma">+</button></div>
+            <div class="resta"><button class="button" data-tipo="operador" data-valor="resta">−</button></div>
+            <div class="ans"><button class="button" data-tipo="operador" data-valor="Ans">ANS</button></div>
+            <div class="tecla_c"><button class="button button--red" data-valor="eliminar">C</button></div>
+            <div class="tecla_ac"><button class="button button--red" data-valor="reset">AC</button></div>
+            <div class="igual"><button class="button button--dark" data-valor="operar">=</button></div>  
         </div>
     </div>
     <!-- <div class="credito">Practicas Html/CSS/Javascript - Erik Medina</div> -->
