--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="lineaSup">
                 <div class="indicadorIzq"><span class="flechaIzq">ï</span></div>
                 <div class="contenedorFormula">
-                    <p class="formula"></p><span class="blink">_</span>
+                    <p class="formula"></p><span class="blink" id="blink">_</span>
                 </div>
                 <div class="indicadorDer">
                     <span class="flechaUp">ä</span><span class="flechaDown">ë</span><span class="flechaRight">ö</span>
@@ -43,7 +43,7 @@
             <div class="abrir_parent"><button class="button" data-tipo="argumento" data-valor="parentesisApertura">(</button></div>
             <div class="cerrar_parent"><button class="button" data-tipo="argumento" data-valor="parentesisCierre">)</button></div>
             <div class="direccional">
-                <div class="flechas">
+                <div class="flechas" id="flechas">
                     <button class="navUp" data-flecha="up">ä</button>
                     <button class="navDown" data-flecha="down">ë</button>
                     <button class="navLeft" data-flecha="left">û</button>
@@ -65,7 +65,7 @@
             <div class="division"><button class="button" data-tipo="operador" data-valor="division">÷</button></div>
             <div class="suma"><button class="button" data-tipo="operador" data-valor="suma">+</button></div>
             <div class="resta"><button class="button" data-tipo="operador" data-valor="resta">−</button></div>
-            <div class="ans"><button class="button" data-tipo="operador" data-valor="Ans">ANS</button></div>
+            <div class="ans"><button class="button" data-tipo="operador" data-valor="ans">ANS</button></div>
             <div class="tecla_c"><button class="button button--red" data-valor="eliminar">C</button></div>
             <div class="tecla_ac"><button class="button button--red" data-valor="reset">AC</button></div>
             <div class="igual"><button class="button button--dark" data-valor="operar">=</button></div>  
