--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="lineaSup">
                 <div class="indicadorIzq"><span class="flechaIzq">ï</span></div>
                 <div class="contenedorFormula">
-                    <p class="formula"></p><span class="blink" id="blink">_</span>
+                    <p class="formula"></p>
                 </div>
                 <div class="indicadorDer">
                     <span class="flechaUp">ä</span><span class="flechaDown">ë</span><span class="flechaRight">ö</span>
