--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 <body>
     <div class="calculadora">
-        <div class="logotipo">
-            <span class="marca">CASIO</span>
-            <div class="fotocelda"></div>
-            <span class="modelo">fx390</span>
+        <div class="header">
+            <span class="header__brand">QASIO</span>
+            <div class="header__cell"></div>
+            <span class="header__model">fx390</span>
         </div>
         <div class="pantalla">
             <div class="lineaSup">
@@ -71,6 +71,5 @@
             <div class="igual"><button class="button button--dark" data-valor="operar">=</button></div>  
         </div>
     </div>
-    <!-- <div class="credito">Practicas Html/CSS/Javascript - Erik Medina</div> -->
 </body>
 </html>
