--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/favicon.png" type="image/x-icon">
-    <!-- <link rel="preload" href="fonts/Ds-Digital.ttf" as="font" type="font/ttf" crossorigin> -->
     <link rel="stylesheet" type="text/css" href="css/normalize.css" as="style"> 
     <link rel="stylesheet" type="text/css" href="css/style.css" as="style">
-    <script defer src="https://cdn.jsdelivr.net/npm/mathjs@12.1.0/lib/browser/math.min.js"></script>
-    <script defer src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjs@12.1.0/lib/browser/math.min.js" defer></script>
+    <script src="js/script.js" defer></script>
     <title>Calculadora Javascript</title>
 </head>
 <body>
